--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
+a {
+  color: #000000;
+}
+a:hover {
+  color: #000000;
+}
 .btn-primary {
   background-color: #00205c;
   border-color: #00205c;
 }
-
 .btn-info {
   background: #00205b;
   border-color: #00205b;
   color: #fff;
 }
-
 .btn-info:hover {
   background: #033ba2 !important;
   border: #033ba2 !important;
@@ -17,4 +21,8 @@
 .swal2-styled.swal2-confirm{
   background-color:#dc3545 !important;
   border:#dc3545 !important;
+}
+
+.eUeqdG {
+  font-size: 15px;
 }
