--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -1,6 +1,7 @@
 .top-nav .nav-item {
     padding: 6px 35px;
-    border: 1px solid;
+    border: .5px solid;
+    margin: 0 -.5px;
     font-weight: 600;
 }
 
@@ -14,7 +15,7 @@
 }
 
 .top-nav .nav-link .active {
-    color: #00205c;
+    color: #0038a1;
     font-weight: 600;
 }
 
@@ -23,8 +24,32 @@
         padding: 6px 30px;
     }
 }
+
 @media only screen and (max-width: 1024px) {
     .top-nav .nav-item {
         padding: 6px 16px;
     }
 }
+
+/* dark section */
+body.dark .navbar-bg {
+    background-color: #252522;
+}
+body.dark .navbar-bg .dropdown-menu {
+    background-color: #252522;
+
+}
+body.dark .navbar-bg .dropdown-menu a{
+    color: #fff;
+}
+body.dark .navbar-bg .dropdown-menu a:hover{
+    color: #252522;
+}
+
+body.dark .top-nav .nav-link {
+    color: var(--dark-color);
+}
+
+/* body.dark .top-nav .nav-item {
+    border: 1px solid;
+} */
